test/fail/modules-shadow.as
module X = { type t  = Int };

module Y = {
  let X = 1;
  type t = X.t
};

